--- a/env/.env.example
+++ b/env/.env.example
@@ -1,3 +1,4 @@
+L1_CHAIN_ID=xxxxxx
 ETH_RPC_URL="xxxxxxxxxxxxxxxxxxxxxxxe"
 ETH_WS_URL="xxxxxxxxxxxxxxxxxxxxx"
 POL_TOKEN_ADDRESS="xxxxxxxxxxxxxxxx"
