fix env example value format

--- a/env/.env.example
+++ b/env/.env.example
@@ -1,6 +1,6 @@
 L1_CHAIN_ID=xxxxxx
-ETH_RPC_URL="xxxxxxxxxxxxxxxxxxxxxxxe"
-ETH_WS_URL="xxxxxxxxxxxxxxxxxxxxx"
-POL_TOKEN_ADDRESS="xxxxxxxxxxxxxxxx"
-INFURA_PROJECT_ID="xxxxxxxxxxxxx"
-ETHERSCAN_API_KEY="xxxxxxxxxxx"
+ETH_RPC_URL=xxxxxxxxxxxxxxxxxxxxxxxe
+ETH_WS_URL=xxxxxxxxxxxxxxxxxxxxx
+POL_TOKEN_ADDRESS=xxxxxxxxxxxxxxxx
+INFURA_PROJECT_ID=xxxxxxxxxxxxx
+ETHERSCAN_API_KEY=xxxxxxxxxxx
