--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,9 +11,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Generate Dockerfile
-      run: echo "aaaa" > a.txt
-    - name: ls
-      run: ls
+      run: |
+        cat > Dockerfile.test << EOF
+        FROM golang:latest
+        RUN echo -n $(date) > a.txt
+        EOF
+    - name: check Dockerfile
+      run: cat Dockerfile.test
     - name: build
-      run: docker build .
+      run: docker build -t test:latest -f Dockerfile.teset
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker push test:latest
